A11y: aXe issues / contrast / wrong attributes in quicklaunchers

--- a/ui/apps/io.ox/calendar/month/style.less
+++ b/ui/apps/io.ox/calendar/month/style.less
@@ -247,7 +247,7 @@
                         top: 50%;
                         font-size: 12px;
                         text-align: center;
-                        color: #777;
+                        color: #767676;
                         .transition(color 0.2s linear);
                     }
                 }
