--- a/ui/apps/io.ox/calendar/week/style.less
+++ b/ui/apps/io.ox/calendar/week/style.less
@@ -162,7 +162,7 @@
                     position: relative;
                     margin-left: 1em;
                     border-bottom: 1px solid @weekview-border;
-                    color: #777;
+                    color: #767676;
 
                     &.working-time-border { border-bottom: 1px solid @weekview-working-time-border; }
 
@@ -182,7 +182,7 @@
 
                 &.secondary-timezone .time.in {
                     font-weight: normal;
-                    color: #777;
+                    color: #767676;
                 }
             }
 
@@ -502,7 +502,7 @@
     }
 
     .offset {
-        color: #777;
+        color: #767676;
         display: inline-block;
         width: 3.5em;
     }
