--- a/ui/apps/io.ox/contacts/addressbook/style.less
+++ b/ui/apps/io.ox/contacts/addressbook/style.less
@@ -44,7 +44,7 @@
         padding: 0 0 16px 0;
         text-align: left;
         .count {
-            color: #777;
+            color: #767676;
         }
         .addresses {
             padding-left: 0;
