--- a/ui/apps/io.ox/mail/detail/content.less
+++ b/ui/apps/io.ox/mail/detail/content.less
@@ -190,7 +190,7 @@ body {
         blockquote blockquote                                   { .blockquote(@brand-primary); }
         blockquote blockquote blockquote                        { .blockquote(#DD0880); }
         blockquote blockquote blockquote blockquote             { .blockquote(#8F09C7); }
-        blockquote blockquote blockquote blockquote blockquote  { .blockquote(#777);    }
+        blockquote blockquote blockquote blockquote blockquote  { .blockquote(#767676);    }
     }
 
     &.disable-links a[href] {
@@ -201,7 +201,7 @@ body {
     }
 
     .blockquote-toggle {
-        color: #777;
+        color: #767676;
         font-size: 13px;
         padding-left: 56px;
         margin: 16px 0;
@@ -210,7 +210,7 @@ body {
         word-break: break-word;
 
         button.bqt {
-            color: #888;
+            color: #696969;
             background-color: #eee;
             padding: 1px 10px;
             display: inline-block;
@@ -231,7 +231,7 @@ body {
     }
 
     .max-size-warning {
-        color: #777;
+        color: #767676;
         margin: 10px -16px 0 -16px;
         padding: 16px 16px 0 16px;
         border-top: 1px solid #ddd;
