--- a/ui/apps/io.ox/tasks/style.less
+++ b/ui/apps/io.ox/tasks/style.less
@@ -21,7 +21,7 @@
     }
 
     .end_date {
-        color: #777;
+        color: #767676;
         margin-left: 0.5em;
         margin-right: 0.5em;
         overflow: visible;
